output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1167.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1167.py", line 145
    /* pos[0]==7 */ durations[7])))))))
    ^
SyntaxError: invalid syntax
